--- a/guess.html
+++ b/guess.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+   <script src="https://telegram.org/js/telegram-web-app.js"></script>
    <header class="header">
       <div class="header__container">
          <div class="header__title">
