--- a/guess.html
+++ b/guess.html
@@ -7,10 +7,12 @@
    <title>Guess</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="icon" href="..//TOL/img/icons/diamond.png">
+   <script src="telegram-passport.js"></script>
+   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
-   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
    <header class="header">
       <div class="header__container">
          <div class="header__title">
