--- a/tickets.html
+++ b/tickets.html
@@ -33,20 +33,20 @@
    <div class="counterboxx" data-counterbox></div>
    <div id="555" class="categories__items">
       <div class="categories__item">
-         <img id="1" src="..//TOL/img/Categories/x26/111.png" alt="" class="item__img" data-box="item" num="111">
+         <img id="1" src="..//TOL/img/Categories/x26/111.png" alt="" class="item__img" onclick="" data-box="item" num="111">
       </div>
       <div class="categories__item">
-         <img id="2" src="..//TOL/img/Categories/x26/131.png" alt="" class="item__img" data-box="item" num="131">
+         <img id="2" src="..//TOL/img/Categories/x26/131.png" alt="" class="item__img" onclick="" data-box="item" num="131">
          <div class="//itemchecked"></div>
       </div>
       <div class="categories__item">
-         <img id="3" src="..//TOL/img/Categories/x26/132.png" alt="" class="item__img" data-box="item" num="132">
+         <img id="3" src="..//TOL/img/Categories/x26/132.png" alt="" class="item__img" onclick="" data-box="item" num="132">
       </div>
       <div class="categories__item">
-         <img id="4" src="..//TOL/img/Categories/x26/147.png" alt="" class="item__img" data-box="item" num="147">
+         <img id="4" src="..//TOL/img/Categories/x26/147.png" alt="" class="item__img" onclick="" data-box="item" num="147">
       </div>
       <div class="categories__item">
-         <img id="5" src="..//TOL/img/Categories/x26/183.png" alt="" class="item__img" data-box="item" num="183">
+         <img id="5" src="..//TOL/img/Categories/x26/183.png" alt="" class="item__img" onclick="" data-box="item" num="183">
          
       </div> 
       <div class="categories__item">
