--- a/guess.html
+++ b/guess.html
@@ -7,8 +7,6 @@
    <title>Guess</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="icon" href="..//TOL/img/icons/diamond.png">
-   <script src="telegram-passport.js"></script>
-   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
@@ -19,7 +17,12 @@
             <a href="index.html" class="header__title__logo">
                <img class="header__logo" src="..//TOL/img/Logoheader/ton symbol.png" alt="">
             </a>
-            <div class="header__title__text">The Open Lottery</div>
+            <a href="index.html">
+               <div class="header__title__text">The Open Lottery</div>
+            </a>
+         </div>
+         <div class="lotlinkcont">
+            <a  class="lotlinkcont__link" href="http://t.me/theoplot">Telegram</a>
          </div>
          <div class="header__info">
             <div class="header__info__text">EQAOi67IbSE6JQtKCrX4Hajk7bcQu9YzgBlr_G8XjJG906Ty</div>
