--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
          </a>
          <div class="header__title__text">The Open Lottery</div>
       </div>
+      <div class="lotlinkcont">
+         <a  class="lotlinkcont__link" href="http://t.me/theoplot">Telegram</a>
+      </div>
       <div class="header__info">
          <div class="header__info__text">EQAOi67IbSE6JQtKCrX4Hajk7bcQu9YzgBlr_G8XjJG906Ty</div>
          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" class="ui-copy-button__icon" style=""><g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="1.3" stroke-linejoin="round"><path d="M6.36 3.35h3.29a2 2 0 012 2v5.3a2 2 0 01-2 2H6.36a2 2 0 01-2-2v-5.3a2 2 0 012-2z"></path><path d="M2 10.65V3.3A2.3 2.3 0 014.3 1h5.4"></path></g></svg>
@@ -30,14 +33,18 @@
 
 <div class="categories">
    <div class="category">
-      <img src="..//TOL/img/Categories/Minerals/Opal.jpg" alt="" class="category__img">
-      <div class="category__about"><br> Get 32 for only 0.8 TON!</div>
+      <a href="tickets.html">
+         <img src="..//TOL/img/Categories/x26/d2.png" alt="" class="category__img">
+      </a>
+      <div class="category__about"><br> Get 21 for only 0.8 TON!</div>
       <a href="tickets.html" class="category__link">Choose your Ticket!</a>
    </div>
    <div class="category">
-      <img src="..//TOL/img/Categories/Particulars/400px-first_gold_beam-beam_collision_events_at_rhic_at_100_100_gev_c_per_beam_recorded_by_star.jpg" alt="" class="category__img">
+      <a href=""></a>
+         <img src="..//TOL/img/Categories/Minerals/Opal.png" alt="" class="category__img">
+      
       <div class="category__about">Play & Earn! <br> Find TON and get it! <br> <span>don't foget</span> copy your adress before play</div>
-   <a href="guess.html" class="category__link">Find your TON!</a>
+      <a href="guess.html" class="category__link">Find your TON!</a>
    </div>
 </div>
 
