--- a/tickets.html
+++ b/tickets.html
@@ -16,7 +16,11 @@
             <a href="index.html" class="header__title__logo">
                <img class="header__logo" src="..//TOL/img/Logoheader/ton symbol.png" alt="">
             </a>
-            <div class="header__title__text">The Open Lottery</div>
+            <a href="index.html">
+            <div class="header__title__text">The Open Lottery</div></a>
+         </div>
+         <div class="lotlinkcont">
+            <a  class="lotlinkcont__link" href="http://t.me/theoplot">Telegram</a>
          </div>
          <div class="header__info">
             <div class="header__info__text">EQAOi67IbSE6JQtKCrX4Hajk7bcQu9YzgBlr_G8XjJG906Ty</div>
@@ -214,7 +218,7 @@
                   <a id="wal" href="#">@wallet</a>
                   <div class="wallet__copy">
                      <div class="wallet__titlecont">
-                        <div class="wallet__title">Copy comment and send <span class="TONnumberw"></span> TON <br> to <a class="linkw" href="https://t.me/mult_your_TON">here</a> via @wallet</div>
+                        <div class="wallet__title"> Copy comment and send <span class="TONnumberw"></span> TON <br> to <a class="linkw" href="https://t.me/theoplot">here</a> via @wallet</div>
                         <div class="wallet__close"></div>
                      </div>
                      <div class="wallet__copybtn">copy comment</div>
