--- a/tickets.html
+++ b/tickets.html
@@ -218,15 +218,14 @@
                   <a id="wal" href="#">@wallet</a>
                   <div class="wallet__copy">
                      <div class="wallet__titlecont">
-                        <div class="wallet__title"> Copy comment and send <span class="TONnumberw"></span> TON <br> to <a class="linkw" href="https://t.me/mult_your_TON">here</a> via @wallet</div>
-                        <div class="wallet__close"></div>
+                        <div class="wallet__title"> 
+                           <span class="wallet__copybtn"> Copy comment </span> and send <span class="TONnumberw"></span> TON <br> to <a class="linkw" href="https://t.me/mult_your_TON">here</a> via @wallet</div>
+                           <div class="wallet__close"></div>
+                        </div>
                      </div>
-                     <div class="wallet__copybtn">copy comment</div>
                   </div>
-               </div>
          </div>
       </div>
-
    </div>
 </div>
 
