--- a/guess.html
+++ b/guess.html
@@ -37,7 +37,7 @@
 
 <div class="address__input">
    <form id="fgw" class="g-form" method="POST" action="#">
-      <input name="guesswallet" placeholder="input your TON wallet addres" type="text" class="adress__area">
+      <input name="guesswallet" placeholder="input your TON wallet address" type="text" class="adress__area">
       <button type="submit" class="adress__btn">send</button>
    </form>   
 </div>
@@ -743,7 +743,7 @@
 
       <div class="ref__container">
          <form action="#">
-            <input placeholder="input your TON wallet addres to get ref" type="text" class="refadress__area">
+            <input placeholder="input your TON wallet address to get ref" type="text" class="refadress__area">
             <button type="submit" class="ref__btn">send</button>
          </form>  
          <div class="boofer"></div>
