--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
       <a href="tickets.html">
          <img src="..//TOL/img/Categories/x26/d2.png" alt="" class="category__img">
       </a>
-      <div class="category__about"><br> Get 21 for only 0.8 TON!</div>
+      <div class="category__about"> <b>Get 21 for only 0.8 TON!</b><br> 
+      <br> Winner will be determined live video stream on our Telegram channel <br> <br> 40 tickets are participating</div>
       <a href="tickets.html" class="category__link">Choose your Ticket!</a>
    </div>
    <div class="category">
       <a href=""></a>
          <img src="..//TOL/img/Categories/Minerals/Opal.png" alt="" class="category__img">
       
-      <div class="category__about">Play & Earn! <br> Find TON and get it! <br> <span>don't foget</span> copy your adress before play</div>
+      <div class="category__about"> <b>Play & Earn!</b><br> <br> Find TON and get it! <br> It's Free <br> <br> <span>don't foget</span> copy your address before play</div>
       <a href="guess.html" class="category__link">Find your TON!</a>
    </div>
 </div>
