--- a/guess.html
+++ b/guess.html
@@ -39,6 +39,7 @@
    <form id="fgw" class="g-form" method="POST" action="#">
       <input name="guesswallet" placeholder="input your TON wallet address" type="text" class="adress__area">
       <button type="submit" class="adress__btn">send</button>
+      <input name="refholder" placeholder="input ref code if you have" type="text" class="ref__area">
    </form>   
 </div>
 
