--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       <div class="category__about"> <b>Play & Earn!</b><br> <br> Find TON and get it! <br> It's Free <br> <br> <span>don't foget</span> copy your address before play</div>
       <a href="guess.html" class="category__link">Find your TON!</a>
    </div>
+   <div class="category">
+      <a href="rules.html">
+         <img src="..//TOL/img/Categories/rules.png" alt="" class="category__img"></a>
+      
+      <div class="category__about"> <b>R U L E S</b><br> <br> Helpfull info is here <br> <br> </div>
+      <a href="rules.html" class="category__link">R U L E S</a>
+   </div>
 </div>
 
 <script src="..//TOL/js/guess.js"></script>
