--- a/rules.html
+++ b/rules.html
@@ -75,7 +75,13 @@
             </div>
          </div>
 
-
+         <div class="ref__container">
+            <form action="#">
+               <input placeholder="input your TON wallet address to get ref" type="text" class="refadress__area">
+               <button type="submit" class="ref__btn">send</button>
+            </form>  
+            <div class="boofer"></div>
+         </div>
 
 
          
