--- a/rules.html
+++ b/rules.html
@@ -45,7 +45,21 @@
                <div class="rules__title">I. X your TON</div>
                <div class="rules__content">Only 40 tickets are participating, they are listed on <a href="https://getgems.io/collection/EQBqsvySF1Ye_fUoQkCR0bqLQDZ4UViv4q-P4C7vYjQR_wmd"> Getgems</a> You can buy them there or directly in our App <br> <br>
                   The winner will be determined live video stream on our <a href="http://t.me/theoplot"> Telegram channel </a> after all tickets are sold!
-                  <br> The winning ticket will be the one of participating which number is drawn first in the randomizer Random.org <br> <a href="tickets.html">Buy tickets!</a> </div>
+                  <br> The winning ticket will be the one of participating which number is drawn first in the randomizer Random.org 
+                  <br>
+                  <br>
+                  Payment:
+                  <br>
+                  Manual
+                  <br>
+                  You can use comfortable TON DNS address to make transactions. Just input "theopenlottery" in receive address area in your non-custodial wallet like Tonkeeper.
+                  <br>
+                  <br>
+                  @wallet
+                  <br>
+                  For custodial wallets like @wallet or another bots you can use "wallet" method from PAY block. And make transfer via Telegram.
+                  <br>
+                  <a href="tickets.html">Buy tickets!</a> </div>
             </div>
             <div class="rules__wrapper">
                <div class="rules__title">II. Find your TON</div>
