--- a/tickets.html
+++ b/tickets.html
@@ -47,7 +47,8 @@
          <img id="3" src="..//TOL/img/Categories/x26/132.png" alt="" class="item__img" onclick="" data-box="item" num="132">
       </div>
       <div class="categories__item">
-         <img id="4" src="..//TOL/img/Categories/x26/147.png" alt="" class="item__img" onclick="" data-box="item" num="147">
+         <img id="4" src="..//TOL/img/Categories/x26/147.png" alt="" class="item__img sold" onclick="" data-box="item" num="147">
+         <div class="sold__item"></div>
       </div>
       <div class="categories__item">
          <img id="5" src="..//TOL/img/Categories/x26/183.png" alt="" class="item__img" onclick="" data-box="item" num="183">
