--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <br> Winner will be determined live video stream on our Telegram channel <br> <br> 40 tickets are participating</div>
       <a href="tickets.html" class="category__link">Choose your Ticket!</a>
    </div>
+
    <div class="category">
       <a href=""></a>
          <img src="..//TOL/img/Categories/Minerals/Opal.png" alt="" class="category__img">
@@ -47,6 +48,18 @@
       <div class="category__about"> <b>Play & Earn!</b><br> <br> Find TON and get it! <br> It's Free <br> <br> <span>don't foget</span> copy your address before play</div>
       <a href="guess.html" class="category__link">Find your TON!</a>
    </div>
+
+   <div class="category">
+      <a href="shares.html">      </a>
+         <img src="..//TOL/img/Shares/NFT Shares issuance.png" alt="" class="category__img">
+
+      <div class="category__about"> <b>S H A R E S</b><br> <br> Here you can buy NFT Shares that give you the right to receive a part of our profits 
+      <br>
+      <br>
+      </div>
+      <a href="shares.html" class="category__link">Buy our Shares!</a>
+   </div>
+
    <div class="category">
       <a href="rules.html">
          <img src="..//TOL/img/Categories/rules.png" alt="" class="category__img"></a>
