--- a/rules.html
+++ b/rules.html
@@ -86,8 +86,38 @@
                   <li>Multiple x3 your reward for 50 invited friends</li>
                   <li>Multiple x5 your reward for 100 invited friends</li>
                </ul> 
+               </div>
             </div>
-         </div>
+
+            <div class="rules__wrapper">
+               <div class="rules__title">IV. NFT Shares</div>
+               <div class="rules__content"> For the proj﻿ect development we issue shares whose owners have the right to regularly receive a percentage of our net monthly profit.
+                  <br>
+                  <br>
+                  Shares are freely reversible and an unlimited number of times can be resold. The payment due to them will be sent to who owns it at the time of sending.
+                  Payments are made every month from the 10th to the 15th.
+                  <br>
+                  <br>
+                  We sell 30% of our net profit for 1,500 shares, the issue consists of shares of following series:
+                  <br>
+                  <br>
+                  - Series A+, nominal 50 TON. Number: 1 share. <br>
+                  Gives the right to receive 5% of our net profit monthly.
+                  <br>
+                  <br>
+                  - Series A, nominal 1 TON. Number: 100 shares. <br>
+                  Gives the right to receive 0.1% of our net profit monthly.
+                  <br>
+                  <br>
+                  - Series B, nominal 0.5 TON. Number: 150 shares. <br>
+                  Gives the right to receive 0.05% of our net profit monthly.
+                  <br>
+                  <br>
+                  - Series C, nominal 0.25 TON. Number: 300 shares. <br>  
+                  Gives the right to receive 0.025% of our net profit monthly.
+
+               </div>
+            </div>
 
          <div class="ref__container">
             <form action="#">
