--- a/bshares.html
+++ b/bshares.html
@@ -33,7 +33,7 @@
       <div class="idcounter"><p></p></div>
 
 <div class="categories__wrapper">
-   <div class="categories__title"> <span class="tap">Tap</span> <span class="and">and</span> <span class="choose">choose</span> <span class="your">your</span> <span class="tickets">Tickets!</span></div>
+   <div class="categories__title"> <span class="tap">Tap</span> <span class="and">and</span> <span class="choose">choose</span> <span class="your">your</span> <span class="tickets">Shares!</span></div>
    <div class="counterboxx" data-counterbox></div>
    <div id="555" class="categories__items">
       <div class="categories__item">
