--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
    <title>Main</title>
    <link rel="stylesheet" href="css/style.css">
    <link rel="icon" href="..//TOL/img/icons/diamond.png">
+   <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="theopenlottery_bot" data-size="medium" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+<script type="text/javascript">
+  function onTelegramAuth(user) {
+    alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+  }
+</script>
 </head>
 <body>
 
