--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <div class="ticker"></div>
 </header>
 
-<div class="main">Categories!</div>
+<div class="main"><a href="conn.html">Categories!</a></div>
 
 <div class="categories">
    <div class="category">
